# you-owe-me

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  run_tests.sh  you_owe_me.sh
report/: jscpd-report.json  report.csv
src/: __main__.py  app.py
src/constants/: config.py
src/utils/: date.py  git.py  string.py  utils_date.py  utils_file.py  utils_git.py  utils_manage_string.py  write_csv_report.py
tests/demo-repository/: util.js
tests/e2e/: test_code_duplicate_percentage.py  test_code_lines.py  test_debt_report.py
tests/e2e-test/: test_sample.py
tests/repository-fixture/: index.js
