[tool.poetry]
name = "you-owe-me"
version = "0.1.0"
description = "Tinkin Technical debt analyzer"
authors = ["Tinkin"]
readme="README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
black = "^21.9b0"
pytest = "^6.2.5"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
